--- a/projects/country/src/countrymanagement/countrydetail/countrydetail.component.css
+++ b/projects/country/src/countrymanagement/countrydetail/countrydetail.component.css
@@ -18,12 +18,22 @@
   input[type=submit] {
     background-color: #4CAF50;
     color: white;
-    padding: 12px 20px;
+    padding: 12px 20px 10px 10px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     float: right;
   }
+    /* Style the submit button */
+    input[type=button] {
+      background-color: rgb(88, 90, 90);
+      color: white;
+      padding: 12px 20px 10px 10px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      float: right;
+    }
   
   /* Style the container */
   .container {
@@ -45,7 +55,16 @@
     width: 75%;
     margin-top: 6px;
   }
-  
+  .col-button {
+    float: right;
+    width: 50%;
+    margin: 10px 30px 10px 30px;
+
+  }
+  .divbutton {
+    margin-right: 10px;
+    padding-right: 10px;
+  }
   /* Clear floats after the columns */
   .row:after {
     content: "";
