--- a/projects/country/src/countrymanagement/countrydetail/countrydetail.component.html
+++ b/projects/country/src/countrymanagement/countrydetail/countrydetail.component.html
@@ -21,7 +21,7 @@
         <label for="cname"> Continent</label>
         </div>
         <div class="col-75">
-          <input type="text" [(ngModel)]="countrydetail.continent"/>
+          <label for="continent">{{ countrydetail.continent }}</label>
       </div>
    </div>
    <div class="row">
