--- a/projects/country/src/countrymanagement/countrydetail/countrydetail.component.css
+++ b/projects/country/src/countrymanagement/countrydetail/countrydetail.component.css
@@ -55,12 +55,7 @@
     width: 75%;
     margin-top: 6px;
   }
-  .col-button {
-    float: right;
-    width: 50%;
-    margin: 10px 30px 10px 30px;
-
-  }
+  
   .divbutton {
     margin-right: 10px;
     padding-right: 10px;
@@ -70,6 +65,16 @@
     content: "";
     display: table;
     clear: both;
+  }
+
+  .col-button {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+  }
+
+  .col-button div {
+    margin: 0.5rem;
   }
   
   /* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
