--- a/projects/country/src/countrymanagement/countrydetail/countrydetail.component.html
+++ b/projects/country/src/countrymanagement/countrydetail/countrydetail.component.html
@@ -28,8 +28,7 @@
     <div class="col-25">
     </div>
     <div class="col-button">
-     <div class="divbutton">
-        <input type="button" value="Back" routerLink="/countrylist"/></div> 
+     <div class="divbutton"><input type="button" value="Back" routerLink="/countrylist"/></div> 
      <div class="divbutton"> <input type="submit" (click)="saveCountry()" value="Save"/> </div>
   </div>
 </div>
